# bao

./: .gitignore  Makefile  README.md  docker-compose.agents.yml  docker-compose.yml  main.py  pyproject.toml
agents/: __init__.py
agents/agent_a_lightweight/: Dockerfile  __init__.py  agent.py  service.py
agents/agent_b_deep/: Dockerfile  __init__.py  agent.py  service.py
agents/agent_c_contextual/: Dockerfile  __init__.py  agent.py  service.py
agents/agent_d_llm/: Dockerfile  agent.py  service.py
agents/autoencoder/: Dockerfile  __init__.py  service.py  train.py
agents/isolation_forest/: Dockerfile  __init__.py  service.py  train.py
agents/llm/: Dockerfile  __init__.py  service.py
bao/: __init__.py  integrated_system.py  observation_calibrator.py  types.py  voi_router.py
bao/benchmark/: __init__.py  agents.py  calibration.py  metrics.py  policies.py  runner.py  types.py
bao/control/: registry.py  scheduler.py
bao/data/: __init__.py
config/: agents.local.yaml  agents.yaml  bao_config.json  benchmark_config.json  orchestrator_config.yaml
docs/: analogy.md  architecture.md  literature.md  marp.md  motivation.md
orchestrator/: __init__.py  belief_state.py  integrated_system.py  types.py  voi_router.py
scripts/: run_benchmark.py  run_local.py  run_replay.py
tests/: conftest.py  test_a2a_client.py  test_belief_state.py  test_config_shared.py  test_integrated_graph.py  test_integrated_runtime.py  test_orchestrator_startup.py  test_policies.py  test_registry.py  test_replay_cli.py  test_runner.py  test_state_sqlite.py  test_voi_router.py
(+13 files in other folders)
