[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestrator"
version = "0.2.0"
description = "Bayesian Agent Orchestrator runtime"
requires-python = ">=3.10"
dependencies = [
  "langgraph>=0.2.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "scipy>=1.10",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
runtime = [
  "mlflow>=2.9",
  "river>=0.21",
  "torch>=2.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["orchestrator*", "agents*"]
